Fix aeosynths 4chanx options z-index.

--- a/style.css
+++ b/style.css
@@ -1826,6 +1826,7 @@ input[name=customIMGB64]+a[name=clearIMG]
 #options
 {
 	width:600px!important;
+    z-index:1000!important;
 }
 #options hr
 {
